--- a/VulnerableWebSite/Web.config
+++ b/VulnerableWebSite/Web.config
@@ -17,7 +17,7 @@
     <httpRuntime requestValidationMode="2.0"/>
     <compilation debug="true" targetFramework="4.0"/>
     <customErrors mode="Off" defaultRedirect="~\myHandleErrors.aspx"/>
-    <sessionState cookieless="false" />
+    <sessionState cookieless="true" />
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
   </system.web>
 </configuration>
