--- a/My_OWASP_Top10_2013_Examples/fullXSS/Web.config
+++ b/My_OWASP_Top10_2013_Examples/fullXSS/Web.config
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-    <system.web>
-      <httpRuntime requestValidationMode="2.0" />
-      <compilation debug="true" targetFramework="4.0" />
-      <pages validateRequest="false"></pages>
-    </system.web>
+  <system.web>
+    <httpRuntime requestValidationMode="2.0"/>
+    <compilation debug="false" targetFramework="4.0"/>
+    <pages validateRequest="false"/>
+    <customErrors mode="On"></customErrors>
+  </system.web>
 </configuration>
